Complete mobile menu section

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <header>
-        <nav class="hamburger-menu">
-            <ul class="">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+        <nav id="hamburger-menu">
+            <ul class="header-list" id="header-list">
+                <li><a class="header-item" href="#">Home</a></li>
+                <li><a class="header-item" href="#">Portfolio</a></li>
+                <li><a class="header-item" href="#">About</a></li>
+                <li class="header-item"><a  href="#">Contact</a></li>
             </ul>
-            <i class="fas fa-bars menu-icon"></i>
+            <i class="fas fa-bars menu-icon" id="menu-icon"></i>
         </nav>
     </header>
     <main class="wrapper-grid">
@@ -181,5 +181,6 @@ If you like what you see and have a project you need coded, don’t hesitate and
             </form>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
