Add requirements for PR

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <header>
         <nav id="hamburger-menu">
             <ul class="header-list" id="header-list">
-                <li><a class="header-item" href="#">Home</a></li>
-                <li><a class="header-item" href="#">Portfolio</a></li>
-                <li><a class="header-item" href="#">About</a></li>
-                <li class="header-item"><a  href="#">Contact</a></li>
+                <li><a class="header-item" href="#Home">Home</a></li>
+                <li><a class="header-item" href="#Portfolio">Portfolio</a></li>
+                <li><a class="header-item" href="#About">About</a></li>
+                <li class="header-item"><a  href="#Contact">Contact</a></li>
             </ul>
             <i class="fas fa-bars menu-icon" id="menu-icon"></i>
         </nav>
     </header>
     <main class="wrapper-grid">
-        <section class="headline-section">
+        <section class="headline-section" id="Home">
             <div class="headline-content">
                 <h2 class="headline-title">Furkan Denizhan</h2>
                 <p class="headline-p">Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.
@@ -34,7 +34,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 <img class="headline-img" src="./media/header-section.svg" alt="">
             </div>
         </section>
-        <section class="projects-section">
+        <section class="projects-section" id="Portfolio">
             <div class="grid-project-div-1">
                 <h2 class="section-title">Projects</h2>
                 <img src="/media/image_dots.svg" alt="dot image">
@@ -120,7 +120,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 <img src="media/grid-project-4-img.png" alt="">
             </div>
         </section>
-        <section class="about-section">
+        <section class="about-section" id="About">
             <div class="about-header">
                 <h2 class="section-title">About</h2>
                 <p class="about-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea eiusmod</p>
@@ -159,7 +159,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 <div class="about-detail"></div>
             </div>
         </section>
-         <section class="contact-section">
+         <section class="contact-section" id="Contact">
             <form  action="https://formspree.io/f/mzbyqovr" method="POST">
                 <h2>Get Started</h2>
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
