--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="view-mobile.css">
     <title>nevisende</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
                 <li><a class="header-item" href="#Home">Home</a></li>
                 <li><a class="header-item" href="#Portfolio">Portfolio</a></li>
                 <li><a class="header-item" href="#About">About</a></li>
-                <li class="header-item"><a  href="#Contact">Contact</a></li>
+                <li><a class="header-item" href="#Contact">Contact</a></li>
             </ul>
             <i class="fas fa-bars menu-icon" id="menu-icon"></i>
         </nav>
