Create html elements for popup

--- a/index.html
+++ b/index.html
@@ -182,6 +182,31 @@ If you like what you see and have a project you need coded, don’t hesitate and
             </form>
         </section>
     </main>
+    <div class="popup-container">
+        <div class="popup">
+            <i class="fas fa-timers"></i>
+            <h2>Project name</h2>
+            <ul class="popup-list">
+                <li>Html</li>
+                <li>Ruby</li>
+            </ul>
+            <img src="./media/project-1.png" alt="">
+            <div class="images">
+                <img src="./media/project-1.png" alt="">
+                <img src="./media/project-1.png" alt="">
+                <img src="./media/project-1.png" alt="">
+                <img src="./media/project-1.png" alt="">
+            </div>
+            <div class="text-container">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi expedita quos velit magni? Porro eos libero, numquam neque nisi facere eum modi a quos autem, facilis nihil hic at aliquid eaque error molestiae sit voluptatum assumenda beatae nostrum. Quas, delectus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi expedita quos velit magni? Porro eos libero, numquam neque nisi facere eum modi a quos autem, facilis nihil hic at aliquid eaque error molestiae sit voluptatum assumenda beatae nostrum. Quas, delectus.</p>
+                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+            </div>
+            <a href="#"><i class="fas fa-arrow-left"></i> Previous Project</a>
+            <a href="#"><i class="fas fa-arrow-right"></i> Next Project</a>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
