--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 <li>Html</li>
                 <li>Ruby</li>
             </ul>
-            <img src="./media/project-1.png" alt="">
+            <img class="popup-img" src="./media/popup_img.png" data="popop-img" width="300" height="300" alt="">
             <div class="images">
-                <img src="./media/project-1.png" alt="">
-                <img src="./media/project-1.png" alt="">
-                <img src="./media/project-1.png" alt="">
-                <img src="./media/project-1.png" alt="">
+                <img class="list-img" src="./media/project-1.png" alt="">
+                <img class="list-img" src="./media/project-1.png" alt="">
+                <img class="list-img" src="./media/project-1.png" alt="">
+                <img class="list-img" src="./media/project-1.png" alt="">
             </div>
             <div class="text-container">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi expedita quos velit magni? Porro eos libero, numquam neque nisi facere eum modi a quos autem, facilis nihil hic at aliquid eaque error molestiae sit voluptatum assumenda beatae nostrum. Quas, delectus.</p>
