--- a/index.html
+++ b/index.html
@@ -190,21 +190,29 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 <li>Html</li>
                 <li>Ruby</li>
             </ul>
-            <img class="popup-img" src="./media/popup_img.png" data="popop-img" width="300" height="300" alt="">
+            <div class="big-image-container">
+                <i class="fas fa-chevron-left"></i>
+                <img class="popup-img" src="./media/popup_img.png" alt="">
+                <i class="fas fa-chevron-right"></i>
+            </div>            
             <div class="images">
-                <img class="list-img" src="./media/project-1.png" alt="">
-                <img class="list-img" src="./media/project-1.png" alt="">
-                <img class="list-img" src="./media/project-1.png" alt="">
-                <img class="list-img" src="./media/project-1.png" alt="">
+                <img class="list-img" src="./media/popup_img.png" alt="">
+                <img class="list-img" src="./media/popup_img.png" alt="">
+                <img class="list-img" src="./media/popup_img.png" alt="">
+                <img class="list-img" src="./media/popup_img.png" alt="">
             </div>
             <div class="text-container">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi expedita quos velit magni? Porro eos libero, numquam neque nisi facere eum modi a quos autem, facilis nihil hic at aliquid eaque error molestiae sit voluptatum assumenda beatae nostrum. Quas, delectus.</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi expedita quos velit magni? Porro eos libero, numquam neque nisi facere eum modi a quos autem, facilis nihil hic at aliquid eaque error molestiae sit voluptatum assumenda beatae nostrum. Quas, delectus.</p>
-                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
-                <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                <div class="popup-links">
+                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                </div>
             </div>
-            <a href="#"><i class="fas fa-arrow-left"></i> Previous Project</a>
-            <a href="#"><i class="fas fa-arrow-right"></i> Next Project</a>
+            <div class="popup-buttons">     
+                <a href="#"><i class="fas fa-arrow-left"></i> Previous Project</a>
+                <a href="#"><i class="fas fa-arrow-right"></i> Next Project</a>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
