Finish layout of the popup window

--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi expedita quos velit magni? Porro eos libero, numquam neque nisi facere eum modi a quos autem, facilis nihil hic at aliquid eaque error molestiae sit voluptatum assumenda beatae nostrum. Quas, delectus.</p>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi expedita quos velit magni? Porro eos libero, numquam neque nisi facere eum modi a quos autem, facilis nihil hic at aliquid eaque error molestiae sit voluptatum assumenda beatae nostrum. Quas, delectus.</p>
                 <div class="popup-links">
-                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
-                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                    <button class="button project-button" type="button">See live <i class="fas fa-external-link-alt"></i></i></button>
+                    <button class="button project-button" type="button">See source <i class="fab fa-github"></i></button>
                 </div>
-            </div>
-            <div class="popup-buttons">     
-                <a href="#"><i class="fas fa-arrow-left"></i> Previous Project</a>
-                <a href="#"><i class="fas fa-arrow-right"></i> Next Project</a>
+                <div class="popup-buttons">     
+                  <a href="#"><i class="fas fa-arrow-left"></i> Previous Project</a>
+                  <a href="#">Next Project <i class="fas fa-arrow-right"></i></a>
+              </div>
             </div>
         </div>
     </div>
