Add scripts to show popup

--- a/index.html
+++ b/index.html
@@ -184,8 +184,10 @@ If you like what you see and have a project you need coded, don’t hesitate and
     </main>
     <div class="popup-container">
         <div class="popup">
-            <i class="fas fa-timers"></i>
-            <h2>Project name</h2>
+            <div class="popup-header">
+                <h2>Project name</h2>
+                <i class="fas fa-times"></i>
+            </div>
             <ul class="popup-list">
                 <li>Html</li>
                 <li>Ruby</li>
