--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
         <section class="projects-section" id="Portfolio">
             <div class="grid-project-div-1">
                 <h2 class="section-title">Projects</h2>
-                <img src="/media/image_dots.svg" alt="dot image">
+                <img src="./media/image_dots.svg" alt="dot image">
             </div>
             <div class="grid-project-div-2 project-container project-1">
                 <div class="project-image"></div>
@@ -67,7 +67,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                 </div>
             </div>
             <div class="grid-project-div-4">
-                <img src="/media/grid-project-2-img.svg" alt="grid-project-2-image">
+                <img src="./media/grid-project-2-img.svg" alt="grid-project-2-image">
             </div>
             <div class="grid-project-div-5  project-container project-3">
                 <div class="project-image"></div>
@@ -93,8 +93,8 @@ If you like what you see and have a project you need coded, don’t hesitate and
                     <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
                 </div>
             </div>
-            <div class="grid-project-div-7"><img src="media/grid-project-3-img.png" alt="grid-project-3-img"></div>
-            <div class="grid-project-div-8"><img src="media/grid-project-5-img.svg" alt="grid-project-5-image"/> <img src="media/grid-project-img-6.svg" alt="grid-project-6-img"/></div>
+            <div class="grid-project-div-7"><img src="./media/grid-project-3-img.png" alt="grid-project-3-img"></div>
+            <div class="grid-project-div-8"><img src="./media/grid-project-5-img.svg" alt="grid-project-5-image"/> <img src="./media/grid-project-img-6.svg" alt="grid-project-6-img"/></div>
             <div class="grid-project-div-9 project-container project-5">
                 <div class="project-image"></div>
                 <div class="project-content">
@@ -118,7 +118,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                     </ul>
                     <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
                 </div>
-                <img src="media/grid-project-4-img.png" alt="">
+                <img src="./media/grid-project-4-img.png" alt="">
             </div>
         </section>
         <section class="about-section" id="About">
@@ -177,8 +177,8 @@ If you like what you see and have a project you need coded, don’t hesitate and
     
                  <textarea name="message" id="message" cols="30" rows="10" maxlength="500" placeholder="Enter your message here..." required></textarea>
                  <button type="submit"> Start collaboration</button>
-                 <img src="media/contact-left-img.svg" alt="">
-                 <img src="media/contact-right-img.svg" alt="">
+                 <img src="./media/contact-left-img.svg" alt="">
+                 <img src="./media/contact-right-img.svg" alt="">
             </form>
         </section>
     </main>
@@ -186,7 +186,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
         <div class="popup">
             <div class="popup-header">
                 <h2>Project name</h2>
-                <i class="fas fa-times"></i>
+                <i id="close-popup" class="fas fa-times"></i>
             </div>
             <ul class="popup-list">
                 <li>Html</li>
