--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                         <li><i class="project-technology">Ruby on Rails</i></li>
                         <li><i class="project-technology">JavaScript</i></li>
                     </ul>
-                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                    <button class="button project-button" type="button" value="1">See this Project <i class="fas fa-arrow-right"></i></button>
                     
                 </div>
             </div>
@@ -63,7 +63,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                         <li><i class="project-technology">Ruby on Rails</i></li>
                         <li><i class="project-technology">JavaScript</i></li>
                     </ul>
-                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                    <button class="button project-button" type="button" value="2">See this Project <i class="fas fa-arrow-right"></i></button>
                 </div>
             </div>
             <div class="grid-project-div-4">
@@ -78,7 +78,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                         <li><i class="project-technology">Ruby on Rails</i></li>
                         <li><i class="project-technology">JavaScript</i></li>
                     </ul>
-                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                    <button class="button project-button" type="button" value="3">See this Project <i class="fas fa-arrow-right"></i></button>
                 </div>
             </div>
             <div class="grid-project-div-6 project-container project-4">
@@ -90,7 +90,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                         <li><i class="project-technology">Ruby on Rails</i></li>
                         <li><i class="project-technology">JavaScript</i></li>
                     </ul>
-                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                    <button class="button project-button" type="button" value="4">See this Project <i class="fas fa-arrow-right"></i></button>
                 </div>
             </div>
             <div class="grid-project-div-7"><img src="./media/grid-project-3-img.png" alt="grid-project-3-img"></div>
@@ -104,7 +104,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                         <li><i class="project-technology">Ruby on Rails</i></li>
                         <li><i class="project-technology">JavaScript</i></li>
                     </ul>
-                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                    <button class="button project-button" type="button" value="5">See this Project <i class="fas fa-arrow-right"></i></button>
                 </div>
             </div>
             <div class="no-grid-project-div project-container project-6">
@@ -116,7 +116,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                         <li><i class="project-technology">Ruby on Rails</i></li>
                         <li><i class="project-technology">JavaScript</i></li>
                     </ul>
-                    <button class="button project-button" type="button">See this Project <i class="fas fa-arrow-right"></i></button>
+                    <button class="button project-button" type="button" value="6">See this Project <i class="fas fa-arrow-right"></i></button>
                 </div>
                 <img src="./media/grid-project-4-img.png" alt="">
             </div>
@@ -185,30 +185,28 @@ If you like what you see and have a project you need coded, don’t hesitate and
     <div class="popup-container">
         <div class="popup">
             <div class="popup-header">
-                <h2>Project name</h2>
+                <h2 id="popup-title"></h2>
                 <i id="close-popup" class="fas fa-times"></i>
             </div>
             <ul class="popup-list">
-                <li>Html</li>
-                <li>Ruby</li>
+    
             </ul>
             <div class="big-image-container">
                 <i class="fas fa-chevron-left"></i>
-                <img class="popup-img" src="./media/popup_img.png" alt="">
+                <img class="popup-img" src="" alt="">
                 <i class="fas fa-chevron-right"></i>
             </div>            
             <div class="images">
+                <!-- <img class="list-img" src="./media/popup_img.png" alt="">
                 <img class="list-img" src="./media/popup_img.png" alt="">
                 <img class="list-img" src="./media/popup_img.png" alt="">
-                <img class="list-img" src="./media/popup_img.png" alt="">
-                <img class="list-img" src="./media/popup_img.png" alt="">
+                <img class="list-img" src="./media/popup_img.png" alt=""> -->
             </div>
             <div class="text-container">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi expedita quos velit magni? Porro eos libero, numquam neque nisi facere eum modi a quos autem, facilis nihil hic at aliquid eaque error molestiae sit voluptatum assumenda beatae nostrum. Quas, delectus.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi expedita quos velit magni? Porro eos libero, numquam neque nisi facere eum modi a quos autem, facilis nihil hic at aliquid eaque error molestiae sit voluptatum assumenda beatae nostrum. Quas, delectus.</p>
+                <p id="popup-p"></p>
                 <div class="popup-links">
-                    <button class="button project-button" type="button">See live <i class="fas fa-external-link-alt"></i></i></button>
-                    <button class="button project-button" type="button">See source <i class="fab fa-github"></i></button>
+                    <button class="button project-button" type="button" id="live-url">See live <i class="fas fa-external-link-alt"></i></i></button>
+                    <button class="button project-button" type="button" id="source-url">See source <i class="fab fa-github"></i></button>
                 </div>
                 <div class="popup-buttons">     
                   <a href="#"><i class="fas fa-arrow-left"></i> Previous Project</a>
