--- a/index.html
+++ b/index.html
@@ -200,9 +200,10 @@ If you like what you see and have a project you need coded, don’t hesitate and
                
             </div>
             <div class="text-container">
+                <p id="popup-p"></p>
                <div class="popup-links">
-                    <button class="button project-button" type="button" >See live <i class="fas fa-external-link-alt"></i></i></button>
-                    <button class="button project-button" type="button">See source <i class="fab fa-github"></i></button>
+                    <a class="button project-button" id="live-url">See live <i class="fas fa-external-link-alt"></i></a>
+                    <a class="button project-button" id="source-url">See source <i class="fab fa-github"></i></a>
                 </div>
                 <div class="popup-buttons">     
                   <a href="#"><i class="fas fa-arrow-left"></i> Previous Project</a>
