--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
                  </div>
                  <textarea name="message" id="message" cols="30" rows="10" maxlength="500" placeholder="Enter your message here..." required></textarea>
                  <button type="submit"> Start collaboration</button>
-                 <div class="error-message">Error!</div>
+                 <div class="error-message"></div>
                  <img src="./media/contact-left-img.svg" alt="">
                  <img src="./media/contact-right-img.svg" alt="">
             </form>
