--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
     <div class="popup-container">
         <div class="popup">
             <div class="popup-header">
-                <h2 id="popup-title"></h2>
+                <h2 id="popup-title">-</h2>
                 <i id="close-popup" class="fas fa-times"></i>
             </div>
             <ul class="popup-list">
@@ -193,7 +193,7 @@ If you like what you see and have a project you need coded, don’t hesitate and
             </ul>
             <div class="big-image-container">
                 <i class="fas fa-chevron-left"></i>
-                <img class="popup-img" src="" alt="">
+                <img class="popup-img" src="#" alt="">
                 <i class="fas fa-chevron-right"></i>
             </div>            
             <div class="images">
