--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@ If you like what you see and have a project you need coded, don’t hesitate and
                  <div class="contact-label-group">
                      <label class="contact-label">
                            <span>Your Name</span> 
-                           <input type="text" maxlength="30" id="name" onkeyup="setInputsToLocalStorage()" required>
+                           <input type="text" maxlength="30" id="name" required>
                      </label>
                      <label class="contact-label"> 
                             <span>Your Email</span>
-                           <input type="email" name="emial" id="email" onkeyup="setInputsToLocalStorage()" required>
+                           <input type="email" name="emial" id="email" required>
                      </label>
                  </div>
-                 <textarea name="message" id="message" cols="30" rows="10" maxlength="500" placeholder="Enter your message here..." onkeyup="setInputsToLocalStorage()" required></textarea>
+                 <textarea name="message" id="message" cols="30" rows="10" maxlength="500" placeholder="Enter your message here..." required></textarea>
                  <button type="submit"> Start collaboration</button>
                  <div class="error-message"></div>
                  <img src="./media/contact-left-img.svg" alt="">
